# api/cmd/main.go
@@ -71,14 +71,16 @@ func main() {
 	r.PATCH("/user-params/:user_id", middleware.JWTAuth(), handler.PatchUserParams)
 	r.POST("/organization", middleware.JWTAuth(), handler.CreateOrganization)
 	r.GET("/organization", middleware.JWTAuth(), handler.GetOrganization)
+	r.POST("/organization/public/by-address", handler.GetOrganizationByAddressPublic)
 	r.PATCH("/organization", middleware.JWTAuth(), handler.PatchOrganization)
-	r.POST("/organization/params/average", middleware.JWTAuth(), handler.GetOrganizationParamsAverage)
-	r.POST("/organization/params/average/by-type", middleware.JWTAuth(), handler.GetOrganizationsParamsAverageByType)
+	r.POST("/organization/params/average", handler.GetOrganizationParamsAverage)
+	r.POST("/organization/params/average/by-type", handler.GetOrganizationsParamsAverageByType)
+	r.POST("/organization/params/average/with-info", handler.GetOrganizationParamsAverageWithOrganizationInfo)
 	r.POST("/organization/comment", middleware.JWTAuth(), handler.CreateOrganizationComment)
 	r.GET("/organization/:organization_id/comments", middleware.JWTAuth(), handler.GetOrganizationComments)
 	r.POST("/organization/:organization_id/map/upload", middleware.JWTAuth(), handler.UploadOrganizationMap)
 	r.POST("/organization/:organization_id/picture/upload", middleware.JWTAuth(), handler.UploadOrganizationPicture)
-	r.GET("/organization/:organization_id/image/:kind", middleware.JWTAuth(), handler.GetOrganizationImageHandler)
+	r.GET("/organization/:organization_id/image/:kind", handler.GetOrganizationImageHandler)
 
 	log.Println("start at :8080")
 	if err := r.Run(":8080"); err != nil {
